--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
    <tr>
     <h2>Biography</h2>
     <p style="text-align:justify;">
-      I am a Ph.D student in Computer Science at the University of Hong Kong, supervised by
+      I am a Ph.D candidate in Computer Science at the University of Hong Kong, supervised by
       Prof. <a href="https://www.cs.hku.hk/people/academic-staff/wenping">Wenping Wang</a> and 
       Prof. <a href="https://i.cs.hku.hk/~taku/">Taku Komura</a>.
-	    Before that, I also received my Bachelor of Computational Mathematics from University of Science and Technology of China in 2018.
+	    Before that, I received a Bachelor of Science in Computational Mathematics from the University of Science and Technology of China.
     </p>
   </tr>
  
     <h2>Research interests </h2>
-    Motion planning, Robotics, Deep learning, etc.
+    I am interested in applying human knowledge to robotic manipulation. This includes understanding how humans interact with their environments and adapting these skills to enhance robotic tasks.
  
   
 </tbody></table>
