--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       I am a Ph.D candidate in Computer Science at the University of Hong Kong, supervised by
       Prof. <a href="https://www.cs.hku.hk/people/academic-staff/wenping">Wenping Wang</a> and 
       Prof. <a href="https://i.cs.hku.hk/~taku/">Taku Komura</a>.
-	    Before that, I received a Bachelor of Science in Computational Mathematics from the University of Science and Technology of China.
+	    Prior to this, I received a Bachelor of Science in Computational Mathematics from the University of Science and Technology of China.
     </p>
   </tr>
  
@@ -71,19 +71,16 @@
 <tr>
   <td>
     <div align="center">
-      <img width="180" src="./ToothPlan/Toothplan.png" alt="">
+      <img width="240" src="./ToothPlan/Toothplan.png" alt="">
     </div>
   </td>
   <td>
     A Potential Field Method for Tooth Motion Planning in Orthodontic Treatment<br>
-    <a href="https://qingfang1208.github.io" target="_blank"><strong>Yumeng Liu</strong></a>,
-    <a href="https://yuexinma.me/index.html" target="_blank">Yuexin Ma</a>, 
-    Lei Yang, Congyi Zhang, Guangshun Wei, Runnan Chen, Min Gu, Jia Pan, Zhengbao Yang, 
-    <a href="https://i.cs.hku.hk/~taku/" target="_blank">Taku Komura</a>, 
-    Shiqing Xin, Yuanfeng Zhou, Changhe Tu, <br>
-    <a href="https://www.cs.hku.hk/people/academic-staff/wenping" target="_blank">Wenping Wang</a>
+    <strong>Yumeng Liu</strong>,
+    Yuexin Ma, Lei Yang, Congyi Zhang, Guangshun Wei, Runnan Chen, Min Gu, Jia Pan, Zhengbao Yang, Taku Komura, 
+    Shiqing Xin, Yuanfeng Zhou, Changhe Tu, Wenping Wang
     <br> 
-    In submission.
+    <strong> In submission. </strong>
     <br>
   </td>
 </tr>
@@ -92,19 +89,18 @@
 <tr>
   <td>
     <div align="center">
-      <img width="180" src="./Realdex/Realdex.png" alt="">
+      <img width="240" src="./Realdex/Realdex.png" alt="">
     </div>
   </td>
   <td>
-    Realdex: Towards human-like grasping for robotic dexterous hand       
+    <a href="https://arxiv.org/abs/2402.13853" target="_blank">Realdex: Towards human-like grasping for robotic dexterous hand </a>  
     <br>  
-    <a href="http://home.ustc.edu.cn/~fq1208/" target="_blank"><strong>Yumeng Liu</strong></a>, 
-	  Yaxun Yang, Youzhuo Wang, Xiaofei Wu, Jiamin Wang, Yichen Yao, Sören Schwertfeger, Sibei Yang, 
-    <a href="https://www.cs.hku.hk/people/academic-staff/wenping" target="_blank">Wenping Wang</a>, 
-    Jingyi Yu, Xuming He, 
-    <a href="https://yuexinma.me/index.html" target="_blank">Yuexin Ma</a>
+    <strong>Yumeng Liu</strong>, 
+	  Yaxun Yang, Youzhuo Wang, Xiaofei Wu, Jiamin Wang, Yichen Yao, Sören Schwertfeger, Sibei Yang, Wenping Wang, 
+    Jingyi Yu, Xuming He, Yuexin Ma
     <br> 
-    International Joint Conference on Artificial Intelligence(IJCAI), 2024 <br>
+    International Joint Conference on Artificial Intelligence(IJCAI), 2024 
+    <br>
     [Code]
     [Database]
     [DOI]
@@ -115,16 +111,15 @@
 <tr>
   <td>
     <div align="center">
-      <img width="180" src="./Tanet/Tanet.png" alt="">
+      <img width="240" src="./Tanet/Tanet.png" alt="">
     </div>
   </td>
   <td>
     <a href="https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123600477.pdf" target="_blank">Tanet: Towards fully automatic tooth arrangement</a>  
     <br> 
 	  Guodong Wei, Zhiming Cui, 
-    <a href="http://home.ustc.edu.cn/~fq1208/" target="_blank"><strong>Yumeng Liu</strong></a>, 
-    Nenglun Chen, Runnan Chen, Guiqing Li, 
-    <a href="https://www.cs.hku.hk/people/academic-staff/wenping" target="_blank">Wenping Wang</a>
+    <strong>Yumeng Liu</strong>, 
+    Nenglun Chen, Runnan Chen, Guiqing Li, Wenping Wang
     <br> 
     European Conference on Computer Vision (ECCV), 481-497, 2020.
     <br>
