--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
   <td>
     <a href="https://arxiv.org/abs/2402.13853" target="_blank">Realdex: Towards human-like grasping for robotic dexterous hand </a>  
     <br>  
-    <strong>Yumeng Liu</strong>, 
-	  Yaxun Yang, Youzhuo Wang, Xiaofei Wu, Jiamin Wang, Yichen Yao, Sören Schwertfeger, Sibei Yang, Wenping Wang, 
+    <strong>Yumeng Liu*</strong>, 
+	  Yaxun Yang*, Youzhuo Wang*, Xiaofei Wu, Jiamin Wang, Yichen Yao, Sören Schwertfeger, Sibei Yang, Wenping Wang, 
     Jingyi Yu, Xuming He, Yuexin Ma
     <br> 
     International Joint Conference on Artificial Intelligence(IJCAI), 2024 
