--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       I am a Ph.D candidate in Computer Science at the University of Hong Kong, supervised by
       Prof. <a href="https://www.cs.hku.hk/people/academic-staff/wenping">Wenping Wang</a> and 
       Prof. <a href="https://i.cs.hku.hk/~taku/">Taku Komura</a>.
-	    Prior to this, I received a Bachelor of Science in Computational Mathematics from the University of Science and Technology of China.
+	    Prior to this, I received a B.Sc. degree from School of the Gifted Young, the University of Science and Technology of China in 2018 with the speciality of Computational Mathematics.
     </p>
   </tr>
  
