--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
   </td>
   <td>
-    <a href="https://arxiv.org/abs/2402.13853" target="_blank">Realdex: Towards human-like grasping for robotic dexterous hand </a>  
+    <a href="https://4dvlab.github.io/RealDex_page/" target="_blank">Realdex: Towards human-like grasping for robotic dexterous hand </a>  
     <br>  
     <strong>Yumeng Liu*</strong>, 
 	  Yaxun Yang*, Youzhuo Wang*, Xiaofei Wu, Jiamin Wang, Yichen Yao, Sören Schwertfeger, Sibei Yang, Wenping Wang, 
@@ -101,8 +101,8 @@
     <br> 
     International Joint Conference on Artificial Intelligence(IJCAI), 2024 
     <br>
-    [Code]
-    [Database]
+    [<a href="https://github.com/4DVLab/RealDex" target="_blank">Code</a>]
+    [<a href="https://drive.google.com/drive/folders/1d5OSVuvYr6-OMG_cuKeoFy6lNdezX8nc" target="_blank">Database</a>]
     [DOI]
   </td>
 </tr>  
