--- a/index.html
+++ b/index.html
@@ -67,6 +67,28 @@
 <table  border="0" width="100%"> <tbody>
 <h2>Publications</h2>
 
+<!-- EasyHOI: Unleashing the Power of Large Models for Reconstructing Hand-Object Interactions in the Wild -->
+<tr>
+  <td>
+    <div align="center">
+      <img width="240" src="./project-teasers/easyhoi.png" alt="">
+    </div>
+  </td>
+  <td>
+    <a href="https://lym29.github.io/EasyHOI-page/" target="_blank">
+      EasyHOI: Unleashing the Power of Large Models for Reconstructing Hand-Object Interactions in the Wild
+    </a>
+    <br>
+    <strong>Yumeng Liu</strong>,
+    Xiaoxiao Long, Zemin Yang, Yuan Liu, Marc Habermann, Christian Theobalt, Yuexin Ma, Wenping Wang
+    <br>
+    [<a href="https://github.com/lym29/EasyHOI" target="_blank">Code</a>]
+    [<a href="https://arxiv.org/abs/2411.14280" target="_blank">Arxiv</a>]
+  </td>
+</tr>
+
+<br>
+
 <!-- A Potential Field Method for Tooth Motion Planning in Orthodontic Treatment -->
 <tr>
   <td>
@@ -84,6 +106,8 @@
     <br>
   </td>
 </tr>
+
+<br>
 
 <!-- Realdex: Towards human-like grasping for robotic dexterous hand -->
 <tr>
@@ -103,9 +127,11 @@
     <br>
     [<a href="https://github.com/4DVLab/RealDex" target="_blank">Code</a>]
     [<a href="https://drive.google.com/drive/folders/1d5OSVuvYr6-OMG_cuKeoFy6lNdezX8nc" target="_blank">Database</a>]
-    [DOI]
+    [<a href="https://doi.org/10.24963/ijcai.2024/758" target="_blank">DOI</a>] 
   </td>
 </tr>  
+
+<br>
 
 <!-- Tanet: Towards fully automatic tooth arrangement -->
 <tr>
