--- a/index.html
+++ b/index.html
@@ -51,10 +51,8 @@
    <tr>
     <h2>Biography</h2>
     <p style="text-align:justify;">
-      I am a Ph.D candidate in Computer Science at the University of Hong Kong, supervised by
-      Prof. <a href="https://www.cs.hku.hk/people/academic-staff/wenping">Wenping Wang</a> and 
-      Prof. <a href="https://i.cs.hku.hk/~taku/">Taku Komura</a>.
-	    Prior to this, I received a B.Sc. degree from School of the Gifted Young, the University of Science and Technology of China in 2018 with the speciality of Computational Mathematics.
+      I am a Ph.D candidate in Computer Science at the University of Hong Kong. During my PhD studies, I was grateful to be supervised by Prof. <a href="https://www.cs.hku.hk/people/academic-staff/wenping">Wenping Wang</a> and Prof. <a href="https://i.cs.hku.hk/~taku/">Taku Komura</a>. I also had the opportunity to work closely with Prof. <a href="https://yuexinma.me/">Yuexin Ma</a> in ShanghaiTech University. 
+	    Prior to this, I received a B.Sc. degree from School of the Gifted Young, the University of Science and Technology of China with the speciality of Computational Mathematics.
     </p>
   </tr>
  
