--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
     <strong>Yumeng Liu</strong>,
     Xiaoxiao Long, Zemin Yang, Yuan Liu, Marc Habermann, Christian Theobalt, Yuexin Ma, Wenping Wang
     <br>
+    Conference on Computer Vision and Pattern Recognition(CVPR), 2025 
+    <br>
     [<a href="https://github.com/lym29/EasyHOI" target="_blank">Code</a>]
     [<a href="https://arxiv.org/abs/2411.14280" target="_blank">Arxiv</a>]
   </td>
