--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" slick-uniqueid="3">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="keywords" content="Yumeng Liu, The University of Hong Kong, HKU, 刘雨萌, 香港大学, motion planning, robotics"> 
+<meta name="keywords" content="Yumeng Liu, The University of Hong Kong, HKU, 刘雨萌, 香港大学, Computer Graphics, Embodied AI"> 
 <meta name="description" content="Yumeng Liu&#39;s home page">
 <link rel="stylesheet" href="./Homepage_files/style/jemdoc.css" type="text/css">
 <style type="text/css">
