--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 
 <table  border="0" width="100%"> <tbody>
 <h2>Publications</h2>
+<p style="font-size: 14px; color: #555; margin-top: 10px; font-style: italic;">
+  * indicates equal contribution. &dagger; indicates corresponding authors.
+</p>
 
 <!-- EasyHOI: Unleashing the Power of Large Models for Reconstructing Hand-Object Interactions in the Wild -->
 <tr>
@@ -78,7 +81,7 @@
     </a>
     <br>
     <strong>Yumeng Liu</strong>,
-    Xiaoxiao Long, Zemin Yang, Yuan Liu, Marc Habermann, Christian Theobalt, Yuexin Ma, Wenping Wang
+    Xiaoxiao Long&dagger;, Zemin Yang, Yuan Liu, Marc Habermann, Christian Theobalt, Yuexin Ma&dagger;, Wenping Wang
     <br>
     Conference on Computer Vision and Pattern Recognition(CVPR), 2025 
     <br>
@@ -100,7 +103,7 @@
     A Potential Field Method for Tooth Motion Planning in Orthodontic Treatment<br>
     <strong>Yumeng Liu</strong>,
     Yuexin Ma, Lei Yang, Congyi Zhang, Guangshun Wei, Runnan Chen, Min Gu, Jia Pan, Zhengbao Yang, Taku Komura, 
-    Shiqing Xin, Yuanfeng Zhou, Changhe Tu, Wenping Wang
+    Shiqing Xin, Yuanfeng Zhou, Changhe Tu, Wenping Wang&dagger;
     <br> 
     <strong> In submission. </strong>
     <br>
@@ -121,7 +124,7 @@
     <br>  
     <strong>Yumeng Liu*</strong>, 
 	  Yaxun Yang*, Youzhuo Wang*, Xiaofei Wu, Jiamin Wang, Yichen Yao, Sören Schwertfeger, Sibei Yang, Wenping Wang, 
-    Jingyi Yu, Xuming He, Yuexin Ma
+    Jingyi Yu, Xuming He, Yuexin Ma&dagger;
     <br> 
     International Joint Conference on Artificial Intelligence(IJCAI), 2024 
     <br>
@@ -145,7 +148,7 @@
     <br> 
 	  Guodong Wei, Zhiming Cui, 
     <strong>Yumeng Liu</strong>, 
-    Nenglun Chen, Runnan Chen, Guiqing Li, Wenping Wang
+    Nenglun Chen, Runnan Chen, Guiqing Li, Wenping Wang&dagger;
     <br> 
     European Conference on Computer Vision (ECCV), 481-497, 2020.
     <br>
