--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <strong>Yumeng Liu</strong>,
     Xiaoxiao Long&dagger;, Zemin Yang, Yuan Liu, Marc Habermann, Christian Theobalt, Yuexin Ma&dagger;, Wenping Wang
     <br>
-    Conference on Computer Vision and Pattern Recognition(CVPR), 2025 
+    <strong>Conference on Computer Vision and Pattern Recognition(CVPR), 2025. </strong>
     <br>
     [<a href="https://github.com/lym29/EasyHOI" target="_blank">Code</a>]
     [<a href="https://arxiv.org/abs/2411.14280" target="_blank">Arxiv</a>]
@@ -126,7 +126,7 @@
 	  Yaxun Yang*, Youzhuo Wang*, Xiaofei Wu, Jiamin Wang, Yichen Yao, Sören Schwertfeger, Sibei Yang, Wenping Wang, 
     Jingyi Yu, Xuming He, Yuexin Ma&dagger;
     <br> 
-    International Joint Conference on Artificial Intelligence(IJCAI), 2024 
+    <strong>Joint Conference on Artificial Intelligence(IJCAI), 2024. </strong> 
     <br>
     [<a href="https://github.com/4DVLab/RealDex" target="_blank">Code</a>]
     [<a href="https://drive.google.com/drive/folders/1d5OSVuvYr6-OMG_cuKeoFy6lNdezX8nc" target="_blank">Database</a>]
@@ -150,7 +150,7 @@
     <strong>Yumeng Liu</strong>, 
     Nenglun Chen, Runnan Chen, Guiqing Li, Wenping Wang&dagger;
     <br> 
-    European Conference on Computer Vision (ECCV), 481-497, 2020.
+    <strong>Conference on Computer Vision (ECCV), 2020.</strong> 
     <br>
     [<a href="https://doi.org/10.1007/978-3-030-58555-6_29" target="_blank">DOI</a>]
   </td>
