--- a/index.html
+++ b/index.html
@@ -67,6 +67,25 @@
 <p style="font-size: 14px; color: #555; margin-top: 10px; font-style: italic;">
   * indicates equal contribution. &dagger; indicates corresponding authors.
 </p>
+<!-- A Potential Field Method for Tooth Motion Planning in Orthodontic Treatment -->
+<tr>
+  <td>
+    <div align="center">
+      <img width="240" src="./ToothPlan/Toothplan.png" alt="">
+    </div>
+  </td>
+  <td>
+    A Potential Field Method for Tooth Motion Planning in Orthodontic Treatment<br>
+    <strong>Yumeng Liu</strong>,
+    Yuexin Ma, Lei Yang, Congyi Zhang, Guangshun Wei, Runnan Chen, Min Gu, Jia Pan, Zhengbao Yang, Taku Komura, 
+    Shiqing Xin, Yuanfeng Zhou, Changhe Tu, Wenping Wang&dagger;
+    <br> 
+    <strong> IEEE Transactions on Visualization and Computer Graphics, 2025. </strong>
+    <br>
+  </td>
+</tr>
+
+<br>
 
 <!-- EasyHOI: Unleashing the Power of Large Models for Reconstructing Hand-Object Interactions in the Wild -->
 <tr>
@@ -87,26 +106,6 @@
     <br>
     [<a href="https://github.com/lym29/EasyHOI" target="_blank">Code</a>]
     [<a href="https://arxiv.org/abs/2411.14280" target="_blank">Arxiv</a>]
-  </td>
-</tr>
-
-<br>
-
-<!-- A Potential Field Method for Tooth Motion Planning in Orthodontic Treatment -->
-<tr>
-  <td>
-    <div align="center">
-      <img width="240" src="./ToothPlan/Toothplan.png" alt="">
-    </div>
-  </td>
-  <td>
-    A Potential Field Method for Tooth Motion Planning in Orthodontic Treatment<br>
-    <strong>Yumeng Liu</strong>,
-    Yuexin Ma, Lei Yang, Congyi Zhang, Guangshun Wei, Runnan Chen, Min Gu, Jia Pan, Zhengbao Yang, Taku Komura, 
-    Shiqing Xin, Yuanfeng Zhou, Changhe Tu, Wenping Wang&dagger;
-    <br> 
-    <strong> In submission. </strong>
-    <br>
   </td>
 </tr>
 
