--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     Yuexin Ma, Lei Yang, Congyi Zhang, Guangshun Wei, Runnan Chen, Min Gu, Jia Pan, Zhengbao Yang, Taku Komura, 
     Shiqing Xin, Yuanfeng Zhou, Changhe Tu, Wenping Wang&dagger;
     <br> 
-    <strong> IEEE Transactions on Visualization and Computer Graphics, 2025. </strong>
+    <strong> IEEE Transactions on Visualization and Computer Graphics (TVCG), 2025. </strong>
     <br>
   </td>
 </tr>
@@ -125,7 +125,7 @@
 	  Yaxun Yang*, Youzhuo Wang*, Xiaofei Wu, Jiamin Wang, Yichen Yao, Sören Schwertfeger, Sibei Yang, Wenping Wang, 
     Jingyi Yu, Xuming He, Yuexin Ma&dagger;
     <br> 
-    <strong>Joint Conference on Artificial Intelligence(IJCAI), 2024. </strong> 
+    <strong>International Joint Conference on Artificial Intelligence(IJCAI), 2024. </strong> 
     <br>
     [<a href="https://github.com/4DVLab/RealDex" target="_blank">Code</a>]
     [<a href="https://drive.google.com/drive/folders/1d5OSVuvYr6-OMG_cuKeoFy6lNdezX8nc" target="_blank">Database</a>]
