--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <strong>Yumeng Liu</strong>, 
     Nenglun Chen, Runnan Chen, Guiqing Li, Wenping Wang&dagger;
     <br> 
-    <strong>Conference on Computer Vision (ECCV), 2020.</strong> 
+    <strong>European Conference on Computer Vision (ECCV), 2020.</strong> 
     <br>
     [<a href="https://doi.org/10.1007/978-3-030-58555-6_29" target="_blank">DOI</a>]
   </td>
