--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <td>
     A Potential Field Method for Tooth Motion Planning in Orthodontic Treatment<br>
     <strong>Yumeng Liu</strong>,
-    Yuexin Ma, Lei Yang, Congyi Zhang, Guangshun Wei, Runnan Chen, Min Gu, Jia Pan, Zhengbao Yang, Taku Komura, 
+    Yuexin Ma, Lei Yang, Congyi Zhang&dagger;, Guangshun Wei, Runnan Chen, Min Gu, Jia Pan, Zhengbao Yang, Taku Komura, 
     Shiqing Xin, Yuanfeng Zhou, Changhe Tu, Wenping Wang&dagger;
     <br> 
     <strong> IEEE Transactions on Visualization and Computer Graphics (TVCG), 2025. </strong>
