--- a/index.html
+++ b/index.html
@@ -67,6 +67,29 @@
 <p style="font-size: 14px; color: #555; margin-top: 10px; font-style: italic;">
   * indicates equal contribution. &dagger; indicates corresponding authors.
 </p>
+
+
+<!-- FreqPolicy: Frequency Autoregressive Visuomotor Policy with Continuous Tokens -->
+<tr>
+  <td>
+    <div align="center">
+      <img width="240" src="./project-teasers/freqpolicy.png" alt="">
+    </div>
+  </td>
+  <td>
+    <a href="https://freq-policy.github.io/" target="_blank">
+      FreqPolicy: Frequency Autoregressive Visuomotor Policy with Continuous Tokens
+    </a>
+    <br>
+    Yiming Zhong, <strong> Yumeng Liu </strong>, Chuyang Xiao, Zemin Yang, Youzhuo Wang, Yufei Zhu, Ye Shi, Yujing Sun, Xinge Zhu, Yuexin Ma&dagger;
+    <br>
+    [<a href="https://freq-policy.github.io/" target="_blank">Code</a>]
+    [<a href="https://freq-policy.github.io/" target="_blank">Arxiv</a>]
+  </td>
+</tr>
+
+<br>
+
 <!-- A Potential Field Method for Tooth Motion Planning in Orthodontic Treatment -->
 <tr>
   <td>
