--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
    <tr>
     <h2>Biography</h2>
     <p style="text-align:justify;">
-      I am a Ph.D candidate in Computer Science at the University of Hong Kong. During my PhD studies, I was grateful to be supervised by Prof. <a href="https://www.cs.hku.hk/people/academic-staff/wenping">Wenping Wang</a> and Prof. <a href="https://i.cs.hku.hk/~taku/">Taku Komura</a>. I also had the opportunity to collaborate closely with Prof. <a href="https://yuexinma.me/">Yuexin Ma</a> and work under her guidance in <a href="https://4dvlab.github.io/">4DVLab</a> at ShanghaiTech University. 
+      I recently completed my Ph.D. in Computer Science at the University of Hong Kong. During my PhD studies, I was grateful to be supervised by Prof. <a href="https://www.cs.hku.hk/people/academic-staff/wenping">Wenping Wang</a> and Prof. <a href="https://i.cs.hku.hk/~taku/">Taku Komura</a>. I also had the opportunity to collaborate closely with Prof. <a href="https://yuexinma.me/">Yuexin Ma</a> and work under her guidance in <a href="https://4dvlab.github.io/">4DVLab</a> at ShanghaiTech University. 
 	    Prior to this, I received a B.Sc. degree from School of the Gifted Young, the University of Science and Technology of China with the speciality of Computational Mathematics.
     </p>
   </tr>
@@ -68,7 +68,6 @@
   * indicates equal contribution. &dagger; indicates corresponding authors.
 </p>
 
-
 <!-- FreqPolicy: Frequency Autoregressive Visuomotor Policy with Continuous Tokens -->
 <tr>
   <td>
@@ -83,12 +82,16 @@
     <br>
     Yiming Zhong, <strong> Yumeng Liu </strong>, Chuyang Xiao, Zemin Yang, Youzhuo Wang, Yufei Zhu, Ye Shi, Yujing Sun, Xinge Zhu, Yuexin Ma&dagger;
     <br>
+    <strong> Arxiv Preprint</strong>
+    <br>
     [<a href="https://freq-policy.github.io/" target="_blank">Code</a>]
-    [<a href="https://freq-policy.github.io/" target="_blank">Arxiv</a>]
+    [<a href="https://arxiv.org/abs/2506.01583" target="_blank">Arxiv</a>]
   </td>
 </tr>
 
 <br>
+<br>
+
 
 <!-- A Potential Field Method for Tooth Motion Planning in Orthodontic Treatment -->
 <tr>
