--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <td width="80%" valign="top" height="173">
       <b><font face="Times New Roman" size="6">Yumeng Liu</font><font size="6" face="楷体_GB2312"> （刘雨萌）</font><font face="Times New Roman" size="6"></font></b>
       <br> 
-      <b><font face="Times New Roman" size="5">Ph.D. Candidate @ HKU</font></b> 
+      <b><font face="Times New Roman" size="5">Ph.D. in Computer Science @ HKU</font></b> 
       <br>
       <p>       
           <br>
