--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
   
 </tbody></table>
 
-<table  border="0" width="100%"> <tbody>
+<table border="0" width="100%"> <tbody>
 <h2>Publications</h2>
-<p style="font-size: 14px; color: #555; margin-top: 10px; font-style: italic;">
+<p style="font-size: 14px; color: #555; margin-top: 10px; margin-bottom: -120px;font-style: italic;">
   * indicates equal contribution. &dagger; indicates corresponding authors.
 </p>
 
@@ -112,6 +112,8 @@
 </tr>
 
 <br>
+<br>
+
 
 <!-- EasyHOI: Unleashing the Power of Large Models for Reconstructing Hand-Object Interactions in the Wild -->
 <tr>
@@ -136,6 +138,8 @@
 </tr>
 
 <br>
+<br>
+
 
 <!-- Realdex: Towards human-like grasping for robotic dexterous hand -->
 <tr>
@@ -160,6 +164,8 @@
 </tr>  
 
 <br>
+<br>
+
 
 <!-- Tanet: Towards fully automatic tooth arrangement -->
 <tr>
