--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" slick-uniqueid="3">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="keywords" content="Yumeng Liu, The University of Hong Kong, HKU, 刘雨萌, 香港大学, Computer Graphics, Embodied AI"> 
+<meta name="keywords" content="Yumeng Liu, University of Science and Technology of China, USTC, 刘雨萌, 中国科学技术大学, Computer Graphics, Embodied AI"> 
 <meta name="description" content="Yumeng Liu&#39;s home page">
 <link rel="stylesheet" href="./Homepage_files/style/jemdoc.css" type="text/css">
 
@@ -42,21 +42,21 @@ h2, .session-title {
     <td width="80%" valign="top" height="173">
       <b><font face="Times New Roman" size="6">Yumeng Liu</font><font size="6" face="楷体_GB2312"> （刘雨萌）</font><font face="Times New Roman" size="6"></font></b>
       <br> 
-      <b><font face="Times New Roman" size="5">Ph.D. in Computer Science @ HKU</font></b> 
+      <b><font face="Times New Roman" size="5">Postdoctoral Researcher </font></b> 
       <br>
       <p>       
           <br>
-			<!-- <a href="http://gcl.ustc.edu.cn/" target="_blank">Graphics&Geometric Computing Laboratory</a>
-			<br> -->
-			<a href="https://www.cs.hku.hk/" target="_blank">Department of Computer Science </a>
+			<a href="http://gcl.ustc.edu.cn/" target="_blank">Graphics&Geometric Computing Laboratory</a>
 			<br>
-			<a href="https://hku.hk/" target="_blank">The University of Hong Kong (HKU)</a>
+			<a href="http://math.ustc.edu.cn/" target="_blank">School of Mathematical Sciences </a>
+			<br>
+			<a href="http://en.ustc.edu.cn/" target="_blank">University of Science and Technology of China </a>
 
           <br><br>
-					The University of Hong Kong <br>
-          Pokfulam Road, Hong Kong <br>
+					Address: 96 Jinzhai Road, Hefei, Anhui, China <br>
 					<br>
-					Email: lym29 AT connect.hku.hk
+					Email: lym29 AT mail.ustc.edu.cn or lym29 AT connect.hku.hk
+          <br>
 
       </p>
     </td>
@@ -68,7 +68,7 @@ h2, .session-title {
    <tr>
     <h2 class="session-title">Biography</h2>
     <p style="text-align:justify;">
-      I recently completed my Ph.D. in Computer Science at the University of Hong Kong. During my PhD studies, I was grateful to be supervised by Prof. <a href="https://www.cs.hku.hk/people/academic-staff/wenping">Wenping Wang</a> and Prof. <a href="https://i.cs.hku.hk/~taku/">Taku Komura</a>. I also had the opportunity to collaborate closely with Prof. <a href="https://yuexinma.me/">Yuexin Ma</a> and work under her guidance in <a href="https://4dvlab.github.io/">4DVLab</a> at ShanghaiTech University. 
+      I am currently a postdoctoral researcher at the Graphics&Geometric Computing Laboratory, University of Science and Technology of China (USTC), collaborating with Prof. <a href="https://scholar.google.com/citations?hl=en&user=1U9U_cYAAAAJ&view_op=list_works">Ligang Liu</a>. During my PhD studies, I was grateful to be supervised by Prof. <a href="https://www.cs.hku.hk/people/academic-staff/wenping">Wenping Wang</a> and Prof. <a href="https://i.cs.hku.hk/~taku/">Taku Komura</a>. I also had the opportunity to collaborate closely with Prof. <a href="https://yuexinma.me/">Yuexin Ma</a> and work under her guidance in <a href="https://4dvlab.github.io/">4DVLab</a> at ShanghaiTech University. 
 	    Prior to this, I received a B.Sc. degree from School of the Gifted Young, the University of Science and Technology of China with the speciality of Computational Mathematics.
     </p>
   </tr>
