--- a/publication.html
+++ b/publication.html
@@ -121,7 +121,7 @@
         <img src="./project-teasers/DexH2R.png" alt="DexH2R">
       </div>
       <div class="pub-info">
-        <a class="pub-title" href="" target="_blank">
+        <a class="pub-title" href="https://dexh2r.github.io/" target="_blank">
           DexH2R: A Benchmark for Dynamic Dexterous Grasping in Human-to-Robot Handover
         </a>
         <div class="pub-authors">
@@ -131,7 +131,9 @@
           International Conference on Computer Vision (ICCV), 2025
         </div>
         <div class="pub-links">
-          [<a href="" target="_blank">Will Be Released Soon</a>]
+          [<a href="https://github.com/4DVLab/DexH2R" target="_blank">Code</a>]
+          [<a href="https://arxiv.org/abs/2505.06136" target="_blank">Arxiv</a>]
+          [<a href="" target="_blank">Dataset(Coming Soon)</a>]
         </div>
       </div>
     </div>
