--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ h2, .session-title {
    <tr>
     <h2 class="session-title">Biography</h2>
     <p style="text-align:justify;">
-      I am currently a postdoctoral researcher at the Graphics&Geometric Computing Laboratory, University of Science and Technology of China (USTC), collaborating with Prof. <a href="https://scholar.google.com/citations?hl=en&user=1U9U_cYAAAAJ&view_op=list_works">Ligang Liu</a>. During my PhD studies, I was grateful to be supervised by Prof. <a href="https://www.cs.hku.hk/people/academic-staff/wenping">Wenping Wang</a> and Prof. <a href="https://i.cs.hku.hk/~taku/">Taku Komura</a>. I also had the opportunity to collaborate closely with Prof. <a href="https://yuexinma.me/">Yuexin Ma</a> and work under her guidance in <a href="https://4dvlab.github.io/">4DVLab</a> at ShanghaiTech University. 
+      I am currently a postdoctoral researcher at the Graphics&Geometric Computing Laboratory, University of Science and Technology of China (USTC), collaborating with Prof. <a href="https://scholar.google.com/citations?hl=en&user=1U9U_cYAAAAJ&view_op=list_works">Ligang Liu</a>. I completed my Ph.D. in Computer Science at the University of Hong Kong, where I was grateful to be supervised by Prof. <a href="https://www.cs.hku.hk/people/academic-staff/wenping">Wenping Wang</a> and Prof. <a href="https://i.cs.hku.hk/~taku/">Taku Komura</a>. I also had the opportunity to collaborate closely with Prof. <a href="https://yuexinma.me/">Yuexin Ma</a> and work under her guidance in <a href="https://4dvlab.github.io/">4DVLab</a> at ShanghaiTech University. 
 	    Prior to this, I received a B.Sc. degree from School of the Gifted Young, the University of Science and Technology of China with the speciality of Computational Mathematics.
     </p>
   </tr>
