--- a/news.html
+++ b/news.html
@@ -57,6 +57,7 @@
   <div id="news-panel">
     <div id="news-header"> </div>
     <div id="news-content">
+      <div>[Sep 19, 2025] 🎉 FreqPolicy has been accepted to NeurIPS2025.</div>
       <div>[Jun 26, 2025] 🎉 DexH2R has been accepted to ICCV2025.</div>
       <div>[Feb 27, 2025] 🎉 EasyHOI has been accepted to CVPR2025.</div>
     </div>
