--- a/publication.html
+++ b/publication.html
@@ -115,6 +115,28 @@
 </head>
 <body>
   <div class="pub-section">
+    <!-- FreqPolicy -->
+    <div class="publication-block">
+      <div class="pub-img">
+        <img src="./project-teasers/freqpolicy.png" alt="FreqPolicy">
+      </div>
+      <div class="pub-info">
+        <a class="pub-title" href="https://freq-policy.github.io/" target="_blank">
+          FreqPolicy: Frequency Autoregressive Visuomotor Policy with Continuous Tokens
+        </a>
+        <div class="pub-authors">
+          Yiming Zhong, <strong class="myname">Yumeng Liu</strong>, Chuyang Xiao, Zemin Yang, Youzhuo Wang, Yufei Zhu, Ye Shi, Yujing Sun, Xinge Zhu, Yuexin Ma&dagger;
+        </div>
+        <div class="pub-venue">
+          The Thirty-Ninth Annual Conference on Neural Information Processing Systems (NeurIPS), 2025.
+        </div>
+        <div class="pub-links">
+          [<a href="https://freq-policy.github.io/" target="_blank">Code</a>]
+          [<a href="https://arxiv.org/abs/2506.01583" target="_blank">Arxiv</a>]
+        </div>
+      </div>
+    </div>
+    
     <!-- DexH2R -->
     <div class="publication-block">
       <div class="pub-img">
@@ -134,28 +156,6 @@
           [<a href="https://github.com/4DVLab/DexH2R" target="_blank">Code</a>]
           [<a href="https://arxiv.org/abs/2505.06136" target="_blank">Arxiv</a>]
           [<a href="" target="_blank">Dataset(Coming Soon)</a>]
-        </div>
-      </div>
-    </div>
-
-    <!-- FreqPolicy -->
-    <div class="publication-block">
-      <div class="pub-img">
-        <img src="./project-teasers/freqpolicy.png" alt="FreqPolicy">
-      </div>
-      <div class="pub-info">
-        <a class="pub-title" href="https://freq-policy.github.io/" target="_blank">
-          FreqPolicy: Frequency Autoregressive Visuomotor Policy with Continuous Tokens
-        </a>
-        <div class="pub-authors">
-          Yiming Zhong, <strong class="myname">Yumeng Liu</strong>, Chuyang Xiao, Zemin Yang, Youzhuo Wang, Yufei Zhu, Ye Shi, Yujing Sun, Xinge Zhu, Yuexin Ma&dagger;
-        </div>
-        <div class="pub-venue">
-          Arxiv Preprint
-        </div>
-        <div class="pub-links">
-          [<a href="https://freq-policy.github.io/" target="_blank">Code</a>]
-          [<a href="https://arxiv.org/abs/2506.01583" target="_blank">Arxiv</a>]
         </div>
       </div>
     </div>
