--- a/publication.html
+++ b/publication.html
@@ -26,7 +26,7 @@
     }
     .publication-block {
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       gap: 28px;
       margin-bottom: 42px;
       padding-bottom: 8px;
@@ -115,6 +115,28 @@
 </head>
 <body>
   <div class="pub-section">
+    <!-- HybridWorldSim -->
+    <div class="publication-block">
+      <div class="pub-img">
+        <img src="./project-teasers/HybridWorldSim.png" alt="HybridWorldSim">
+      </div>
+      <div class="pub-info">
+        <a class="pub-title" href="https://www.arxiv.org/abs/2511.22187" target="_blank">
+          HybridWorldSim: A Scalable and Controllable High-fidelity Simulator for Autonomous Driving
+        </a>
+        <div class="pub-authors">
+          Qiang Li*, Yingwenqi Jiang*, Tuoxi Li, Duyu Chen, Xiang Feng, Yucheng Ao, Shangyue Liu, Xingchen Yu, Youcheng Cai, <strong class="myname">Yumeng Liu&dagger;</strong>, Yuexin Ma&dagger;, Xin Hu, Li Liu, Yu Zhang, Linkun Xu, Bingtao Gao, Xueyuan Wang, Shuchang Zhou, Xianming Liu, Ligang Liu
+        </div>
+        <div class="pub-venue">
+          arXiv, 2025.
+        </div>
+        <div class="pub-links">
+          <!-- [<a href="" target="_blank">Code</a>] -->
+          [<a href="https://www.arxiv.org/abs/2511.22187" target="_blank">Arxiv</a>]
+        </div>
+      </div>
+    </div>
+
     <!-- FreqPolicy -->
     <div class="publication-block">
       <div class="pub-img">
