--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ h2, .session-title {
       <li>Imitation learning and skill transfer</li>
       <li>Embodied intelligence for robotics and autonomous driving</li>
     </ul>
-    <p>I am interested in advancing 3D/4D modeling for interactive behaviors and scenes, using these data to develop imitation learning and skill transfer methods for robots, and leveraging high-fidelity scene models to improve autonomous driving. Ultimately, I aim to bring embodied AI closer to human-level intelligence in real-world environments.</p>
+    <p>I am interested in advancing 3D/4D modeling for interactive behaviors and scenes, using these data to develop imitation learning and skill transfer methods for robots, and providing high-fidelity scene modeling to improve autonomous driving system. Ultimately, I aim to bring embodied AI closer to human-level intelligence in real-world environments.</p>
 </tbody></table>
 
 <!-- News Session -->
